--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "cigar-store",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "https://sucharski90.github.io/cigar-shop/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
+    "gh-pages": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
@@ -15,9 +17,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+   "predeploy": "npm run build",
+   "deploy" : "gh-pages -d build",
+   "build": "react-scripts build",
+   "test": "react-scripts test",
+   "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": "react-app"
