--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cigar-store",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "https://sucharski90.github.io/cigar-shop/",
+  "homepage": "https://sucharski90.github.io/cigar-shop/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -13,16 +13,16 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-twitter-embed": "^3.0.3",
     "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
-   "predeploy": "npm run build",
-   "deploy" : "gh-pages -d build",
-   "build": "react-scripts build",
-   "test": "react-scripts test",
-   "eject": "react-scripts eject"
-    
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
