--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-twitter-embed": "^3.0.3",
+    "sharethis-reactjs": "^1.5.0",
     "styled-components": "^4.4.1"
   },
   "scripts": {
